# nova-backup-rag

./: .replit  ARCHITECTURE.md  BACKEND_GUIDE.md  FRONTEND_INTEGRATION.md  Nova_Insight_Agent_Training.txt  analysis_debug.txt  nusf.md  ocr_dump_20260327_104929_sa_18bbdb0a952334bd.txt  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Azure_AI_RAG_AGENT_1769771510428.json  Pasted--Guys-I-have-reviewed-the-current-output-carefully-What_1774530990444.txt  Pasted--NOVA-INSIGHT-TRANSFORMATION-TO-A-DECISION-ENGINE-Inter_1776095714837.txt  Pasted--Overview-Logs-Analytics-Resources-Domains-Manage-Searc_1779120709917.txt  Pasted--Time-Deployment-Source-Log-2026-03-25-19-20-54-06-d2ef_1774455352548.txt  Pasted--User-14-47-41-ERROR-Upload-failed-Error-code-400-error_1773068761355.txt  Pasted--detail-error-Validation-failed-for-test1-csv-237-ERROR_1779117445798.txt  Pasted--detail-error-Validation-failed-for-test1-csv-237-ERROR_1779118042388.txt  Pasted-15-11-INFO-HTTP-Request-POST-https-azurenordicgpt-opena_1773069392790.txt  Pasted-2026-03-09-20-02-47-83-99b640ed-System-command-finished_1773069340208.txt  Pasted-2026-03-17-23-00-40-49-b75cfa57-User-18-00-40-INFO-HTTP_1773770772743.txt  Pasted-2026-03-17-23-28-04-67-b75cfa57-User-18-28-04-INFO-Pred_1773772167828.txt  Pasted-2026-03-25-19-43-44-62-d2ef17a1-User-2026-03-25-14-43-4_1774450083098.txt  Pasted-2026-03-25-21-27-05-05-8d24a038-User-2026-03-25-16-27-0_1774456410587.txt  Pasted-2026-05-18-20-46-41-04-e58d96b7-User-15-46-41-INFO-Nova_1779119246195.txt  (+27 more)
ingestion/: detector.py  pipeline.py
(+34 files in other folders)
